--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Face_Detection/FaceDetectionModel.keras filter=lfs diff=lfs merge=lfs -text
+Facial_Recognition/FaceDetectionModel.keras filter=lfs diff=lfs merge=lfs -text
